--- a/Front-end/03-Personal portfolio/css/index.css
+++ b/Front-end/03-Personal portfolio/css/index.css
@@ -17,7 +17,7 @@ body {
     justify-content: space-between;
     align-items: center;
     margin-top: 0.5em;
-    margin-bottom: 3em;
+    margin-bottom: 7em;
 }
 
 #navbar span {
@@ -34,7 +34,8 @@ body {
 
 #navbar ul li a {
     color: #fff;
-    font-size: 1.2em;
+    font-size: 1.3em;
+    font-weight: bold;
     text-decoration: none;
 }
 
@@ -42,5 +43,18 @@ body {
     text-decoration: underline;
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 7em;
+}
+
+main h1 {
+    color: khaki;
+    font-size: 6em;
+    font-family: 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
 
 
