--- a/Front-end/03-Personal portfolio/css/index.css
+++ b/Front-end/03-Personal portfolio/css/index.css
@@ -109,4 +109,27 @@ main h1 {
     list-style-type: none;
 }
 
+.reviews {
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+}
+
+.cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3em;
+}
+
+.card {
+    background-color: #fff;
+    border-radius: 0.2em;
+    box-shadow: 0.1em 0.1em 0.5em 0.1em;
+    padding: 1.3em;
+}
+
+.card p:nth-of-type[] {
+    color: #333;
+}
+
 
