added responsiveness to links

--- a/Front-end/03-Personal portfolio/css/index.css
+++ b/Front-end/03-Personal portfolio/css/index.css
@@ -75,8 +75,15 @@ main h1 {
     color: #fff;
 }
 
-.flex-container p, .flex-container ul li{
+.flex-container p, .flex-container ul li {
     color: #8ecae6;
+}
+
+.flex-container ul li:hover {
+    color: #fff;
+    text-decoration: underline;
+    transition: color 3s ease;
+    cursor: pointer;
 }
 
 /* .projects { */
