Modified card container appearance

--- a/Front-end/03-Personal portfolio/css/contact.css
+++ b/Front-end/03-Personal portfolio/css/contact.css
@@ -8,3 +8,16 @@ body {
     align-items: center;
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2em;
+    background-color: #fff;
+    width: 25em;
+    height: 30em;
+    margin: 10em;
+    border-radius: 2em;
+    box-shadow: 1em 0.1em 1em 1em;
+}
