--- a/Front-end/03-Personal portfolio/css/contact.css
+++ b/Front-end/03-Personal portfolio/css/contact.css
@@ -1,5 +1,5 @@
 body {
-    background-image: linear-gradient(#444 30%, #2d2d2d 50%);
+    background-color: #023047;
     margin: 0;
     padding: 0;
     display: flex;
@@ -14,10 +14,53 @@ body {
     justify-content: center;
     align-items: center;
     gap: 2em;
-    background-color: #fff;
+    background-color: #52717f;
     width: 25em;
-    height: 30em;
+    height: 35em;
     margin: 10em;
     border-radius: 2em;
     box-shadow: 1em 0.1em 1em 1em;
+}
+
+.container h1 {
+    font-size: 2em;
+    font-family: monospace;
+    color: #fff;
+}
+
+.container label {
+    font-family: 'Courier New', Courier, monospace;
+    color: #fff;
+    font-size: 1.2em;
+    margin-bottom: 1.5em;
+}
+
+.container input {
+    width: 100%;
+    height: 1.3em;
+    color: #023047;
+    font-size: 1.1em;
+    border-radius: 0.4em;
+}
+
+.container input:focus {
+    outline: none;
+    border-color: lightgreen;
+}
+
+.container textarea {
+    resize: none;
+}
+
+.container  #submit {
+    background-color: #669bbc;
+    color: #000;
+    height: 1.5em;
+}
+
+.container #submit:hover {
+    transform: scale(1.1);
+    background-color: #001219;
+    transition: background-color 3s ease-in-out, transform 3s ease;
+    color: #fff;
 }
