--- a/Front-end/03-Personal portfolio/css/index.css
+++ b/Front-end/03-Personal portfolio/css/index.css
@@ -86,10 +86,6 @@ main h1 {
     cursor: pointer;
 }
 
-/* .projects { */
-    /* border: 1px; */
-/* } */
-
 .projects h2{
     font-family: 'Times New Roman', Times, serif;
 }
@@ -176,12 +172,13 @@ main h1 {
     box-shadow: 0.1em 0.1em 0.5em 0.1em;
     padding: 1.3em;
     filter: blur(1.5px);
+    transition: transform 4s ease;
 }
 
 .card:hover {
     cursor: pointer;
     transform: scale(1.1);
-    transition: transform 4s ease, filter 4s ease;;
+    transition: transform 4s ease, filter 4s ease;
     filter: blur(0px);
 }
 
@@ -199,5 +196,7 @@ footer small {
     font-size: 1.2em;
     font-style: italic;
 }
+
+/* media queries */
 
 
