--- a/Front-end/03-Personal portfolio/css/index.css
+++ b/Front-end/03-Personal portfolio/css/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Georama:ital,wght@0,100..900;1,100..900&family=Montserrat+Underline:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sigmar&display=swap');
+
 *, ::before, ::after {
     margin: 0;
     padding: 0;
@@ -24,8 +26,9 @@ body {
 
 #navbar span {
     font-weight: bold;
-    font-size: 2rem;
+    font-size: 1.7rem;
     color: #fff;
+    font-family: Georama;
 }
 
 #navbar ul {
@@ -41,6 +44,7 @@ body {
     font-size: 1.3rem;
     font-weight: bold;
     text-decoration: underline;
+    font-family: Montserrat Underline;
 }
 
 #navbar ul li a:hover {
@@ -58,9 +62,11 @@ main {
 
 main h1 {
     color: #fb8500;
-    font-size: 6em;
-    font-family: 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    font-size: 4rem;
+    font-family: Sigmar;
 }
+
+
 
 .flex-container {
     display: flex;
@@ -74,10 +80,12 @@ main h1 {
 
 .flex-container h2, .reviews h2 {
     color: #fff;
+    font-family: Nunito;
 }
 
 .flex-container p, .flex-container ul li {
     color: #8ecae6;
+    font-family: sans-serif;
 }
 
 .flex-container ul li:hover {
@@ -85,10 +93,6 @@ main h1 {
     text-decoration: underline;
     transition: color 3s ease;
     cursor: pointer;
-}
-
-.projects h2{
-    font-family: 'Times New Roman', Times, serif;
 }
 
 .projects ul {
@@ -129,8 +133,8 @@ main h1 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    border-left: 0.1rem solid #fff;
-    border-right: 0.1rem solid #fff;
+    /* border-left: 0.1rem solid #fff; */
+    /* border-right: 0.1rem solid #fff; */
     padding: 0 2rem;
 }
 
@@ -176,15 +180,15 @@ main h1 {
     transition: transform 4s ease;
 }
 
+.card p {
+    font-family: sans-serif;
+}
+
 .card:hover {
     cursor: pointer;
     transform: scale(1.1);
     transition: transform 4s ease, filter 4s ease;
     filter: blur(0px);
-}
-
-.card p:nth-child(2){
-    color: #999;
 }
 
 footer {
@@ -196,6 +200,7 @@ footer small {
     color: #fff;
     font-size: 1.2rem;
     font-style: italic;
+    font-family: Poppins;
 }
 
 /* media queries */
