--- a/Front-end/03-Personal portfolio/css/index.css
+++ b/Front-end/03-Personal portfolio/css/index.css
@@ -145,6 +145,7 @@ main h1 {
 .experience div a {
     color: #fff;
     text-decoration: none;
+    font-family: Montserrat Underline;
 }
 
 .experience div a:hover {
