--- a/Front-end/03-Personal portfolio/css/articles.css
+++ b/Front-end/03-Personal portfolio/css/articles.css
@@ -1,3 +1,6 @@
+html {
+    font-size: 100%;
+}
 body {
     margin: 0;
     padding: 0;
@@ -10,23 +13,23 @@ body {
 
 body p {
     color: #fff;
-    font-size: 1.2em;
+    font-size: 1.2rem;
 }
 
 body h1 {
     color: #fb8500;
-    font-size: 3em;
+    font-size: 3rem;
 }
 
 body .container{
     background-color: #457b9d;
-    border-radius: 1em;
-    width: 40em;
-    height: 40em;
+    border-radius: 1rem;
+    width: 40rem;
+    height: 40rem;
 }
 
 article {
-    padding: 2em;
+    padding: 2rem;
 }
 
 .container article p {
@@ -36,7 +39,7 @@ article {
 body article h2 {
     text-align: center;
     text-decoration: underline;
-    font-size: 1.6em;
+    font-size: 1.6rem;
     color: #252422;
 }
 
