--- a/Front-end/03-Personal portfolio/css/index.css
+++ b/Front-end/03-Personal portfolio/css/index.css
@@ -66,7 +66,11 @@ main h1 {
     font-family: Sigmar;
 }
 
-
+#catchy-text {
+    color: #fff;
+    font-family: Poppins;
+    font-size: 1.8rem;
+}
 
 .flex-container {
     display: flex;
@@ -81,6 +85,10 @@ main h1 {
 .flex-container h2, .reviews h2 {
     color: #fff;
     font-family: Nunito;
+}
+
+.flex-container p {
+    word-spacing: 0.1rem;
 }
 
 .flex-container p, .flex-container ul li {
