Modified h2 tag font

--- a/Front-end/03-Personal portfolio/css/projects.css
+++ b/Front-end/03-Personal portfolio/css/projects.css
@@ -44,4 +44,9 @@ body h1 {
     align-items: center;
 }
 
+.container div h2 {
+    font-weight: bold;
+    font-family: Georama;
+    text-decoration: underline;
+}
 /* media queries */
