--- a/Front-end/03-Personal portfolio/css/articles.css
+++ b/Front-end/03-Personal portfolio/css/articles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Georama:ital,wght@0,100..900;1,100..900&family=Montserrat+Underline:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sigmar&display=swap');
 html {
     font-size: 100%;
 }
@@ -19,6 +20,7 @@ body p {
 body h1 {
     color: #fb8500;
     font-size: 3rem;
+    font-family: Sigmar;
 }
 
 body .container{
@@ -34,13 +36,19 @@ article {
 
 .container article p {
     color: #dad7cd;
+    font-family: Roboto;
 }
 
 body article h2 {
     text-align: center;
     text-decoration: underline;
     font-size: 1.6rem;
+    font-family: Poppins;
     color: #252422;
+}
+
+body > p {
+    font-family: Nunito;
 }
 
 /* media queries */
