--- a/Front-end/03-Personal portfolio/css/index.css
+++ b/Front-end/03-Personal portfolio/css/index.css
@@ -218,3 +218,49 @@ footer small {
 
 /* responsiveness */
 
+@media (max-width: 720px) {
+    html {
+        font-size: 50%;
+    }
+    body {
+        height: 100vh;
+        overflow-x: hidden;
+        overflow-y: scroll;
+    }
+    #navbar {
+        display: flex;
+        flex-direction: column;
+        position: sticky;
+        justify-content: center;
+        align-items: center;
+    }
+    #navbar ul {
+        margin-top: 1rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    #navbar ul li {
+        display: block;
+    }
+    main h1 {
+        font-size: 2rem;
+    }
+    .flex-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .reviews {
+        display: flex;
+        flex-direction: column;
+    }
+    .cards-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+}
