--- a/Front-end/03-Personal portfolio/css/index.css
+++ b/Front-end/03-Personal portfolio/css/index.css
@@ -13,7 +13,7 @@ html {
 body {
     background-color: #023047;
     overflow-y: auto;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     box-sizing: border-box;
     min-height: 100vh;
 }
@@ -220,7 +220,7 @@ footer small {
 
 @media (max-width: 720px) {
     html {
-        font-size: 50%;
+        font-size: 60%;
     }
     body {
         height: 100vh;
@@ -262,5 +262,19 @@ footer small {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+    }
+}
+@media (max-width: 768px) {
+    html {
+        font-size: 60%;
+    }
+}
+
+@media (min-width: 1000px) {
+    html {
+        font-size: 80%;
+    }
+    body {
+        overflow: scroll;
     }
 }
