Added margin to all elements

--- a/Front-end/03-Personal portfolio/css/contact.css
+++ b/Front-end/03-Personal portfolio/css/contact.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Georama:ital,wght@0,100..900;1,100..900&family=Montserrat+Underline:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sigmar&display=swap');
+* {
+    margin: 0.3rem;
+}
 html {
     font-size: 100%;
 }
@@ -84,10 +87,10 @@ body {
         font-size: 50%;
     }
     .container input {
-        width: 80%;
+        width: 90%;
     }
     .container textarea {
-        width: 17rem;
+        width: 15rem;
         height: 8rem;
     }
 }
@@ -97,10 +100,10 @@ body {
     }
     .container input {
         border-radius: 1rem;
-        width: 80%;
+        width: 90%;
     }
     .container textarea {
-        width: 20rem;
+        width: 15rem;
         height: 9rem;
     }
 }
