--- a/Front-end/05-Testimonial cards/styles.css
+++ b/Front-end/05-Testimonial cards/styles.css
@@ -38,7 +38,7 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    outline: 2px solid #333;
+    /* outline: 2px solid #333; */
     margin: 0.5rem 0;
 }
 
@@ -47,6 +47,8 @@ body {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    /* outline: 2px solid #777; */
+    /* background-color: #d9dcd6; */
 }
 
 .btn-container {
@@ -54,9 +56,20 @@ body {
     justify-content: center;
     align-items: center;
     margin-top: 1rem;
+    /* outline: 1px solid #222; */
 }
 
 button {
-    width: 5rem;
+    width: 6rem;
     height: 2rem;
+    font-size: 1rem;
+    background-color: #f7b801;
+    color: #000;
+    border-radius: 0.2rem;
+    outline: none;
+    transition: background-color 4s ease; 
+}
+
+button:hover {
+    background-color: #f4f;
 }
