Added custom styles and modified card sizing values

--- a/Front-end/05-Testimonial cards/styles.css
+++ b/Front-end/05-Testimonial cards/styles.css
@@ -21,16 +21,20 @@ body {
     align-items: center;
     flex-wrap: wrap;
     flex-grow: 1;
-    gap: 1rem;
+    gap: 3rem;
     padding: 1rem 0;
 }
 
 .card {
     background-color: #fff;
-    width: 20rem;
-    height: 22rem;
+    width: 15rem;
+    height: 25rem;
     border-radius: 0.3rem;
     padding: 1rem;
+}
+
+.card:nth-child(2) .text {
+    height: 30%;
 }
 
 .image {
@@ -38,7 +42,6 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    /* outline: 2px solid #333; */
     margin: 0.5rem 0;
 }
 
@@ -47,8 +50,11 @@ body {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    /* outline: 2px solid #777; */
-    /* background-color: #d9dcd6; */
+    font-size: 0.85rem;
+    height: 40%;
+    width: 100%;
+    border-radius: 0.3rem;
+    padding: 0 0.5rem;
 }
 
 .btn-container {
@@ -56,7 +62,6 @@ body {
     justify-content: center;
     align-items: center;
     margin-top: 1rem;
-    /* outline: 1px solid #222; */
 }
 
 button {
@@ -67,9 +72,10 @@ button {
     color: #000;
     border-radius: 0.2rem;
     outline: none;
-    transition: background-color 4s ease; 
+    transition: background-color 4s ease, scale 3s ease;
 }
 
 button:hover {
     background-color: #f4f;
+    transform: scale(1.1); 
 }
